# TFG

./: .gitignore  README.md
.github/workflows/: allow_words.txt  alz_care_backend_ci.yml  alz_care_frontend_ci.yml  check_spelling.yaml  lint.yml  personal_dico.txt  spellcheck.yaml
Alz-care-APP/: README.md
Alz-care-APP/alz-care-api/: .gitignore  app.py  pyproject.toml
Alz-care-APP/alz-care-api/config/: general_config.py
Alz-care-APP/alz-care-api/src/classes/: file_controller.py  img_classification.py  model_manager.py
Alz-care-APP/alz-care-api/src/definitions/: classes_constanst.py
Alz-care-APP/alz-care-api/src/services/: image_service.py  shared_schemas.py
Alz-care-APP/alz-care-api/src/utils/: utils.py
Alz-care-APP/alz-care-api/tests/: test_file_controller.py
Alz-care-APP/alz-care-front/: package-lock.json  package.json
code/: README.md
code/dataset/: balance_dataset.py  create_dataset.py  show_nifiti_image.py
code/notebooks/: ALL_SUBJECTS_IMAGES.ipynb  EfficientNetB7.ipynb  EfficientNetB7_AXIAL.ipynb  EfficientNetB7_CORONAL.ipynb  EfficientNetB7_SAGITAL.ipynb  NOT_REPEATED_SUBJECTS_IMAGES.ipynb  RESNET50.ipynb
doc/: Makefile  README.md  bibliografia.bib  proyecto.tex
doc/apendices/: ADNI.tex
doc/capitulos/: 01_Introduccion.tex  02_Planificacion.tex  03_Alzheimer.tex  04_Estado_del_arte.tex  05_Desarrollo_experimental.tex  06_Aplicacion_web.tex  06_App.tex  07_Conclusiones.tex
doc/glosario/: entradas_glosario.tex
doc/portada/: portada.tex
doc/prefacios/: prefacio.tex
scripts/: order_allow_words.py  order_dico.py  spell_check.sh
(+42 files in other folders)
